# pay_model

./: Cargo.toml  README.md
src/: ethaddr_gen.rs  lib.rs  proxy_settler.rs  receiver_settler.rs
src/models/: hashstore.rs  mod.rs  pay_id_infos.rs  proof.rs  proxy.rs  segment_vc.rs  settlement.rs
src/receipts/: mod.rs  overpay_checker.rs  pay_ids_to_segvc.rs  payment_grouper.rs  profit_calculator.rs
