[package]
name = "zkpay-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }

sha3 = {workspace = true}
sha2 = {workspace = true}
tiny-keccak = "2.0.2"
libsecp256k1 = { workspace = true }
rand = "0.8.5"
rlp = "0.6.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
serde = {workspace = true}
serde_json = {workspace = true}
alloy-primitives = {workspace = true}
sp1-zkvm = { version = "3.4.0",features = ["verify"] }
alloy-serde = "0.9.0"
# sp1-prover = "3.4.0"
# sp1-verifier = "3.4.0"
# tokio = {workspace = true}


